# howmanygpus

./: LICENSE  README.md  pyproject.toml
src/howmanygpus/: __init__.py  main.py  presets.py  simulation.py  sizing.py  spec.py  sweeps.py
