[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "howmanygpus"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.6",
    "scipy>=1.17.1",
    "simpy>=4.1.1",
    "streamlit>=1.57.0",
    "watchdog>=6.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/howmanygpus"]

[tool.uv]
package = true
